<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Heart-O-Matic</string>
    <string name="settings">Settings</string>
    <string name="update">Update</string>
    <string name="connect">Connect</string>
    <string name="personal">Personal</string>
        <string name="title_age">Age</string>
        <string name="summary_age">SUMMARY</string>
        <string name="title_sex">Gender</string>
        <string name="summary_sex">SUMMARY</string>
        <string name="title_resting_hr">Resting Heart Rate</string>
        <string name="summary_resting_hr">SUMMARY</string>
        <string name="title_max_hr">Max Heart Rate</string>
        <string name="summary_max_hr">SUMMARY</string>
    <string name="zones">Zones</string>
        <string name="title_moderate_zone_high">Moderate Zone High</string>
        <string name="summary_moderate_zone_high">SUMMARY</string>
        <string name="title_moderate_zone_low">Moderate Zone Low</string>
        <string name="summary_moderate_zone_low">SUMMARY</string>
        <string name="title_auto_calculate">Auto-calculate</string>
        <string name="summary_auto_calculate">Auto-calculate from personal settings</string>
    <string name="hr_belt">Heart Rate Belt</string>
    <string name="audio">Audio</string>
        <string name="title_enable_zone_warnings">Zone warning alarms</string>
        <string name="summary_enable_zone_warnings">SUMMARY</string>
        <string name="title_hr_audio_feedback">Heart rate audio feedback</string>
        <string name="summary_hr_audio_feedback">SUMMARY</string>
    <string name="account">Account</string>
        <string name="title_username">Username</string>
        <string name="summary_username">SUMMARY</string>
        <string name="title_password">Password</string>
        <string name="summary_password">SUMMARY</string>
</resources>
