<?xml version="1.0" encoding="utf-8"?> 
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceScreen
        android:key="button_personal_category_key"
        android:title="@string/personal"
        android:persistent="false"
        >
        <ListPreference
            android:title="@string/title_sex"
            android:summary="@string/summary_sex"
            android:key="sex"
            android:entries="@array/settings_sex"
            android:entryValues="@array/settings_sex_values"
            android:defaultValue="not_specified"
            >
        </ListPreference>
        <EditTextPreference
            android:title="@string/title_age" 
            android:summary="@string/summary_age" 
            android:key="age"
            android:numeric="integer"
            />
        <!--[TODO: do we need this?]
        <EditTextPreference
            android:title="@string/title_resting_hr" 
            android:summary="@string/summary_resting_hr" 
            android:key="resting_hr"
            android:numeric="integer"
            />
        -->
        <EditTextPreference
            android:title="@string/title_max_hr" 
            android:summary="@string/summary_max_hr" 
            android:key="max_hr"
            android:numeric="integer"
            />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="button_zones_category_key"
        android:title="@string/zones"
        android:persistent="false"
        >
        <EditTextPreference
            android:title="@string/title_moderate_zone_high" 
            android:summary="@string/summary_moderate_zone_high" 
            android:key="moderate_zone_high"
            android:numeric="integer"
            />
        <EditTextPreference
            android:title="@string/title_moderate_zone_low" 
            android:summary="@string/summary_moderate_zone_low" 
            android:key="moderate_zone_low"
            android:numeric="integer"
            />
        <Preference
            android:title="@string/title_auto_calculate"
            android:summary="@string/summary_auto_calculate"
            android:key="auto_calculate" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="button_hr_belt_category_key"
        android:title="@string/hr_belt"
        android:persistent="false"
        >
        <!-- TODO -->
    </PreferenceScreen>
    <PreferenceScreen
        android:key="button_audio_category_key"
        android:title="@string/audio"
        android:persistent="false"
        >
        <CheckBoxPreference
            android:key="zone_warnings"
            android:title="@string/title_enable_zone_warnings"
            android:summary="@string/summary_enable_zone_warnings"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:key="hr_audio_feedback"
            android:title="@string/title_hr_audio_feedback"
            android:summary="@string/summary_hr_audio_feedback"
            android:defaultValue="true"
            />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="button_account_category_key"
        android:title="@string/account"
        android:persistent="false"
        >
        <EditTextPreference
            android:title="@string/title_username" 
            android:summary="@string/summary_username" 
            android:key="username"
            />
        <EditTextPreference
            android:title="@string/title_password" 
            android:summary="@string/summary_password" 
            android:key="password"
            />
    </PreferenceScreen>
</PreferenceScreen> 

